--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite --config ./config/vite.config.ts",
     "build": "tsc -b && vite build --config ./config/vite.config.ts",
-    "lint": "eslint .",
+    "lint": "eslint /config/",
     "preview": "vite preview --config ./config/vite.config.ts"
   },
   "dependencies": {
