fix: remove config folder

--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --config ./config/vite.config.ts",
-    "build": "tsc -b && vite build --config ./config/vite.config.ts",
-    "lint": "eslint /config/",
-    "preview": "vite preview --config ./config/vite.config.ts"
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@emotion/react": "^11.13.3",
