--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.0.2",
     "@mui/material": "^6.0.2",
+    "gsap": "^3.12.5",
     "portfolio": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
